ci: publish artifacts, npm package, and docs on main

--- a/.gitignore
+++ b/.gitignore
@@ -84,7 +84,6 @@ out
 
 # Nuxt.js build / generate output
 .nuxt
-dist
 
 # Gatsby files
 .cache/
@@ -207,3 +206,5 @@ $RECYCLE.BIN/
 # -----------------------------------------------------------------------------
 # Project Specific
 # -----------------------------------------------------------------------------
+dist
+site
