--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,11 +29,15 @@ jobs:
       - name: Read package metadata
         id: pkg
         run: |
-          echo "name=$(node -p \"require('./package.json').name\")" >> "$GITHUB_OUTPUT"
-          echo "version=$(node -p \"require('./package.json').version\")" >> "$GITHUB_OUTPUT"
+          set -euo pipefail
+          PACKAGE_NAME=$(node -e "console.log(require('./package.json').name)")
+          PACKAGE_VERSION=$(node -e "console.log(require('./package.json').version)")
+          echo "name=${PACKAGE_NAME}" >> "$GITHUB_OUTPUT"
+          echo "version=${PACKAGE_VERSION}" >> "$GITHUB_OUTPUT"
       - name: Pack npm artifact
         id: pack
         run: |
+          set -euo pipefail
           PACKAGE_FILE=$(npm pack --silent)
           echo "file=${PACKAGE_FILE}" >> "$GITHUB_OUTPUT"
       - name: Upload dist and package artifacts
