--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,7 @@ jobs:
     permissions:
       contents: read
       packages: write
+      pages: write
       id-token: write
     env:
       NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
