--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "node": ">=20"
   },
   "scripts": {
-    "build": "tsc -p tsconfig.json",
+    "build": "npx --yes --package typescript@5.9.2 tsc -p tsconfig.json",
     "test": "vitest run",
     "test:watch": "vitest",
     "check": "npm run build && npm run test",
@@ -33,10 +33,8 @@
   "license": "MIT",
   "devDependencies": {
     "vitest": "^3.2.4",
-    "marked": "^15.0.6"
-  },
-  "dependencies": {
-    "@types/node": "^24.3.0",
-    "typescript": "^5.9.2"
+    "marked": "^15.0.6",
+    "typescript": "^5.9.2",
+    "@types/node": "^24.3.0"
   }
 }
