feat(sh004): support dot-path frontmatter state matching
Add nested frontmatter lookup for SH004 conditions via dot-path keys and typed scalar values.

Ship JSON schema for SH004 config and document matching semantics plus editor setup.

--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "type": "module",
   "main": "./dist/index.mjs",
   "exports": {
-    ".": "./dist/index.mjs"
+    ".": "./dist/index.mjs",
+    "./schemas/markdownlint-shell.schema.json": "./schemas/markdownlint-shell.schema.json"
   },
   "files": [
     "dist",
     "docs/rules",
+    "schemas",
     "README.md",
     "LICENSE"
   ],
@@ -31,6 +33,9 @@
     "tree"
   ],
   "license": "MIT",
+  "dependencies": {
+    "yaml": "^2.8.1"
+  },
   "devDependencies": {
     "vitest": "^3.2.4",
     "marked": "^15.0.6",
